# Flam_RnD_intern

./: .gitignore  README.md  TODO.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flam/rnd/: CameraActivity.kt  MainActivity.kt
app/src/main/java/com/flam/rnd/utils/: CameraUtils.kt  OpenCVUtils.kt
app/src/main/res/drawable/: camera_button_background.xml  capture_button_background.xml  card_background.xml  control_button_background.xml  controls_background.xml  ic_camera.xml  ic_code.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_legacy.xml  ic_process.xml  info_card_background.xml  primary_button_background.xml  processing_button_background.xml  processing_indicator.xml  secondary_button_background.xml  status_overlay_background.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
jni/: CMakeLists.txt  native_lib.cpp
